--- a/packages/site/common/components/spacing/example.module.css
+++ b/packages/site/common/components/spacing/example.module.css
@@ -16,7 +16,7 @@
   height: 100%;
   width: 100%;
   border-style: solid;
-  border-color: rgba(42, 147, 219, 0.35); /* TODO: pull color out of DS? */
+  border-color: #8FC4E9;
   border-width: 0;
 }
 .line {
@@ -24,6 +24,10 @@
   border-style: dashed;
   border-color: #FF00CE;
   border-width: 0;
+}
+.lineSingleSide {
+  composes: line;
+  background: #8FC4E9;
 }
 .lineTop {
   composes: line;
